--- a/software/.settings/com.atollic.truestudio.debug.hardware_device.prefs
+++ b/software/.settings/com.atollic.truestudio.debug.hardware_device.prefs
@@ -1,7 +1,7 @@
 BOARD=None
 CODE_LOCATION=FLASH
 ENDIAN=Little-endian
-MCU=
+MCU=STM32F042C6
 MCU_VENDOR=STMicroelectronics
 MODEL=Lite
 PROBE=ST-LINK
