--- a/software/.cproject
+++ b/software/.cproject
@@ -40,7 +40,9 @@
 									<listOptionValue builtIn="false" value="STM32F042x6"/>
 									<listOptionValue builtIn="false" value="QUTMS_CAN_AMS"/>
 									<listOptionValue builtIn="false" value="DEBUG"/>
-									<listOptionValue builtIn="false" value="BMS_DEBUG_BALANCING"/>
+									<listOptionValue builtIn="false" value="BMS_DEBUG_BALANCING=0"/>
+									<listOptionValue builtIn="false" value="BMS_DEBUG_HEARTBEAT=0"/>
+									<listOptionValue builtIn="false" value="BMS_DISABLE_PRINT_TEMPS=0"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.1918234246" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../QUTMS_Embedded/Inc"/>
